Add new metadata to test post

--- a/_posts/2015-11-05-test.md
+++ b/_posts/2015-11-05-test.md
@@ -1,12 +1,15 @@
 ---
 title: test
-updated: 2015-11-05
+author: Colin
 comments:
-- >
-  Dude, this is a comment whose lines are wrapped around like a long bit of text
-  that has been word-wrapped. How neat is that? That's prett neat.
-- This is also a comment.
-- I have added another comment.
+- name: Colin
+  content: >
+      Dude, this is a comment whose lines are wrapped around like a long bit of
+      text that has been word-wrapped. How neat is that? That's prett neat.
+- name: Colin
+  content: This is also a comment.
+- name: Calzoneman
+  content: I have added another comment.
 ---
 
 This is a test of the lumeh.org blog system. If you see this post, please take
