Update layout and rename comment.name -> comment.author

--- a/_posts/2015-11-05-test.md
+++ b/_posts/2015-11-05-test.md
@@ -2,13 +2,13 @@
 title: test
 author: Colin
 comments:
-- name: Colin
+- author: Colin
   content: >
       Dude, this is a comment whose lines are wrapped around like a long bit of
-      text that has been word-wrapped. How neat is that? That's prett neat.
-- name: Colin
+      text that has been word-wrapped. How neat is that? That's pretty neat.
+- author: Colin
   content: This is also a comment.
-- name: Calzoneman
+- author: Calzoneman
   content: I have added another comment.
 ---
 
